--- a/create-widget-new.html
+++ b/create-widget-new.html
@@ -1117,7 +1117,7 @@
                                         width: 13px;
                                       " width="13" height="13">
                               </a>
-                              <div class="dropdown-menu dashboard-title-menu-dropdown scroll" aria-labelledby="dropdownMenuButton" x-placement="bottom-start" >
+                              <div class="dropdown-menu dashboard-title-menu-dropdown " aria-labelledby="dropdownMenuButton" x-placement="bottom-start" >
                                 <ul class="dropdown-with-logos">
                                   <li >
                                     <a href="#">
@@ -1256,7 +1256,7 @@
                                         width: 13px;
                                       " width="13" height="13">
                               </a>
-                              <div class="dropdown-menu dashboard-title-menu-dropdown scroll" aria-labelledby="dropdownMenuButton" x-placement="bottom-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(0px, 42px, 0px);">
+                              <div class="dropdown-menu dashboard-title-menu-dropdown " aria-labelledby="dropdownMenuButton" x-placement="bottom-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(0px, 42px, 0px);">
                                 <ul class="dropdown-with-logos">
                                   <li >
                                     <a href="#">
@@ -1379,7 +1379,7 @@
                                         width: 13px;
                                       " width="13" height="13">
                               </a>
-                              <div class="dropdown-menu dashboard-title-menu-dropdown scroll" aria-labelledby="dropdownMenuButton" x-placement="bottom-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(0px, 42px, 0px);">
+                              <div class="dropdown-menu dashboard-title-menu-dropdown" aria-labelledby="dropdownMenuButton" x-placement="bottom-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(0px, 42px, 0px);">
                                 <ul class="dropdown-with-logos">
                                   <li >
                                     <a href="#">
