--- a/create-widget-new.html
+++ b/create-widget-new.html
@@ -987,7 +987,7 @@
   
                   <div class="legend-goes-here">
                    <div class="tile-box">
-                      <h5>Lorem ipsum dolor</h5>
+                      <!-- <h5>Lorem ipsum dolor</h5> -->
                       <h2>1057</h2>
                       <p>Duis aute irure dolor</p>
                    </div>
