--- a/create-widget-new.html
+++ b/create-widget-new.html
@@ -476,22 +476,50 @@
                 </div>
 
                 <div class="legend-goes-here">
-                 <img src="images/pie-chart.png" />
-                </div>
-
-                <div class="legend-guide">
-                 <div class="legend-guide-item-row">
-                  <div class="legend-yellow"></div>
-                  <div>Label 1</div>
-                 </div>
-                 <div class="legend-guide-item-row">
-                  <div class="legend-red"></div>
-                  <div>Label 2</div>
-                 </div>
-                 <div class="legend-guide-item-row">
-                  <div class="legend-green"></div>
-                  <div>Label 3</div>
-                 </div>
+                  <div class="table-preview">
+                    <table class="table table-sm">
+                      <thead>
+                        <tr>
+                          <th scope="col">Aute irre dolor</th>
+                          <th scope="col">Aute irre</th>
+                          <th scope="col">Aute irre </th>
+                          <th scope="col">Aute irre</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <th scope="row">Aute irre dolor</th>
+                          <td>90</td>
+                          <td>90</td>
+                          <td>90</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">Aute irre dolor</th>
+                          <td>20</td>
+                          <td>20</td>
+                          <td>20</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">Uis aute irurelor</th>
+                          <td >10</td>
+                          <td>10</td>
+                          <td>10</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">Ute irure dolor</th>
+                          <td >40</td>
+                          <td>40</td>
+                          <td>40</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">Duis aute irur</th>
+                          <td>76</td>
+                          <td>76</td>
+                          <td>76</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
                 </div>
                </div>
               </div>
