--- a/create-widget-new.html
+++ b/create-widget-new.html
@@ -517,6 +517,36 @@
                           <td>76</td>
                           <td>76</td>
                         </tr>
+                        <tr>
+                          <th scope="row">Aute irre dolor</th>
+                          <td>90</td>
+                          <td>90</td>
+                          <td>90</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">Aute irre dolor</th>
+                          <td>20</td>
+                          <td>20</td>
+                          <td>20</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">Uis aute irurelor</th>
+                          <td >10</td>
+                          <td>10</td>
+                          <td>10</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">Ute irure dolor</th>
+                          <td >40</td>
+                          <td>40</td>
+                          <td>40</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">Duis aute irur</th>
+                          <td>76</td>
+                          <td>76</td>
+                          <td>76</td>
+                        </tr>
                       </tbody>
                     </table>
                   </div>
@@ -861,6 +891,51 @@
                           <div>232</div>
                         </li>
                         <li>
+                          <div><div class="legend-green"></div></div>
+                          <div>Aute irure dolor</div>
+                          <div>92</div>
+                        </li>
+  <li>
+                          <div><div class="legend-green"></div></div>
+                          <div>Aute irure dolor</div>
+                          <div>92</div>
+                        </li>
+  <li>
+                          <div><div class="legend-green"></div></div>
+                          <div>Aute irure dolor</div>
+                          <div>92</div>
+                        </li>
+  <li>
+                          <div><div class="legend-green"></div></div>
+                          <div>Aute irure dolor</div>
+                          <div>92</div>
+                        </li>
+  <li>
+                          <div><div class="legend-green"></div></div>
+                          <div>Aute irure dolor</div>
+                          <div>92</div>
+                        </li>
+  <li>
+                          <div><div class="legend-green"></div></div>
+                          <div>Aute irure dolor</div>
+                          <div>92</div>
+                        </li>
+  <li>
+                          <div><div class="legend-green"></div></div>
+                          <div>Aute irure dolor</div>
+                          <div>92</div>
+                        </li>
+  <li>
+                          <div><div class="legend-green"></div></div>
+                          <div>Aute irure dolor</div>
+                          <div>92</div>
+                        </li>
+  <li>
+                          <div><div class="legend-green"></div></div>
+                          <div>Aute irure dolor</div>
+                          <div>92</div>
+                        </li>
+  <li>
                           <div><div class="legend-green"></div></div>
                           <div>Aute irure dolor</div>
                           <div>92</div>
