--- a/create-widget-new.html
+++ b/create-widget-new.html
@@ -16,7 +16,7 @@
  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
   integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
- <script src="js/perfect-scrollbar.js"></script>
+ 
 
  <title>Vinventa</title>
 </head>
@@ -466,7 +466,7 @@
                 </div>
                </div>
 
-               <div class="widget-legend-heading">
+               <div class="widget-legend-heading ">
                 Widget Perview
                </div>
 
@@ -476,7 +476,7 @@
                 </div>
 
                 <div class="legend-goes-here">
-                  <div class="table-preview">
+                  <div class="table-preview mCustomScrollbar" data-mcs-theme="minimal-dark">
                     <table class="table table-sm">
                       <thead>
                         <tr>
@@ -863,7 +863,7 @@
                   </div>
   
                   <div class="legend-goes-here">
-                    <div class="list-chart-div">
+                    <div class="list-chart-div  mCustomScrollbar" data-mcs-theme="minimal-dark">
                       <ul>
                         <li>
                           <div><div class="legend-yellow"></div></div>
@@ -1220,7 +1220,7 @@
                                         width: 13px;
                                       " width="13" height="13">
                               </a>
-                              <div class="dropdown-menu dashboard-title-menu-dropdown " aria-labelledby="dropdownMenuButton" x-placement="bottom-start" >
+                              <div class="dropdown-menu dashboard-title-menu-dropdown mCustomScrollbar" data-mcs-theme="minimal-dark" aria-labelledby="dropdownMenuButton" x-placement="bottom-start" >
                                 <ul class="dropdown-with-logos">
                                   <li >
                                     <a href="#">
@@ -1359,8 +1359,8 @@
                                         width: 13px;
                                       " width="13" height="13">
                               </a>
-                              <div class="dropdown-menu dashboard-title-menu-dropdown " aria-labelledby="dropdownMenuButton" x-placement="bottom-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(0px, 42px, 0px);">
-                                <ul class="dropdown-with-logos">
+                              <div class="dropdown-menu dashboard-title-menu-dropdown mCustomScrollbar" data-mcs-theme="minimal-dark" aria-labelledby="dropdownMenuButton" x-placement="bottom-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(0px, 42px, 0px);">
+                                <ul class="dropdown-with-logos mCustomScrollbar" data-mcs-theme="minimal-dark">
                                   <li >
                                     <a href="#">
                                       <div class="dropdown-logo">
@@ -1482,8 +1482,8 @@
                                         width: 13px;
                                       " width="13" height="13">
                               </a>
-                              <div class="dropdown-menu dashboard-title-menu-dropdown" aria-labelledby="dropdownMenuButton" x-placement="bottom-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(0px, 42px, 0px);">
-                                <ul class="dropdown-with-logos">
+                              <div class="dropdown-menu dashboard-title-menu-dropdown mCustomScrollbar" data-mcs-theme="minimal-dark" aria-labelledby="dropdownMenuButton" x-placement="bottom-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(0px, 42px, 0px);">
+                                <ul class="dropdown-with-logos mCustomScrollbar">
                                   <li >
                                     <a href="#">
                                       <div class="dropdown-logo">
@@ -1634,7 +1634,7 @@
   });
  </script>
  <script src="js/custom.js"></script>
-
+ <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
  <script>
   /*
 Slidemenu
