--- a/create-widget-new.html
+++ b/create-widget-new.html
@@ -178,7 +178,7 @@
            </div>
 
            <!-- slides -->
-           <div class="carousel-inner">
+           <div class="carousel-inner mCustomScrollbar" data-mcs-theme="minimal-dark">
             <div class="carousel-item active">
              <div class="widget-grid-two-legend-wrapper">
               <div class="widget-grid-two-legend-left-column">
