--- a/device-listings-redesign.html
+++ b/device-listings-redesign.html
@@ -347,7 +347,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="sliding-section">
+                            <div class="sliding-section devices-list-slider-section-wrapper">
                                 <div class="sliding-left-section">
                                     <a href="javascript:" class="slide-btn"><img src="images/silde-icon.png"
                                             class="scren-slide-icon"></a>
