--- a/device-listings-redesign.html
+++ b/device-listings-redesign.html
@@ -341,7 +341,7 @@
                                                 placeholder="Search by Host Name, User Name, Manufacturer Serial MAC or IP..."
                                                 class="search-field">
                                             <a href="#" class="search-query-dropdown-btn">
-                                                <img src="images/down-arrow.svg">
+                                                <img src="images/down-arrow.svg" style="width: 14px;">
                                             </a>
                                         </div>
                                     </div>
