--- a/device-listings-redesign-table.html
+++ b/device-listings-redesign-table.html
@@ -1589,7 +1589,7 @@
                                     <div class="row m-0">
                                         <div class="col-lg-12 inner-tab-right-section p-0">
                                             <div class="grid-table-flow">
-                                                <div class="table-full-scroll">
+                                                <div class="table-full-scrolls">
                                                     <div class="wrapper" style="display: flex;">
                                                         <div class="standard-table  table-responsive">
                                                             <table class="table  table-hover">
