--- a/table.html
+++ b/table.html
@@ -97,11 +97,11 @@
             </td>
             <td>Otto</td>
             <td>@defaultadmin defaultadmin defaultadmin</td>
-            <th>28 /12/ 2020</th>
+            <td>28 /12/ 2020</td>
             <td>28 /12/ 2020</td>
             <td>info@vinventa.com</td>
             <td>090078601</td>
-            <th>Admin</th>
+            <td>Admin</td>
             <td>Active</td>
             <td>Super Admin</td>
             <td class="td-center">
@@ -120,11 +120,11 @@
             <td>Mark</td>
             <td>Otto</td>
             <td class="bold-heading">@defaultadmin defaultadmin defaultadmin</td>
-            <th>28 /12/ 2020</th>
+            <td>28 /12/ 2020</td>
             <td>28 /12/ 2020</td>
             <td>info@vinventa.com</td>
             <td>090078601</td>
-            <th>Admin</th>
+            <td>Admin</td>
             <td>Active</td>
             <td>Super Admin</td>
             <td class="td-center">
@@ -144,11 +144,11 @@
             <td>Mark</td>
             <td>Otto</td>
             <td>@defaultadmin defaultadmin defaultadmin</td>
-            <th>28 /12/ 2020</th>
+            <td>28 /12/ 2020</td>
             <td>28 /12/ 2020</td>
             <td>info@vinventa.com</td>
             <td>090078601</td>
-            <th>Admin</th>
+            <td>Admin</td>
             <td>Active</td>
             <td>Super Admin</td>
             <td class="td-center">
@@ -167,11 +167,11 @@
             <td>Mark</td>
             <td>Otto</td>
             <td>@defaultadmin defaultadmin defaultadmin</td>
-            <th>28 /12/ 2020</th>
+            <td>28 /12/ 2020</td>
             <td>28 /12/ 2020</td>
             <td>info@vinventa.com</td>
             <td>090078601</td>
-            <th>Admin</th>
+            <td>Admin</td>
             <td>
 
              <input type="checkbox">
@@ -199,11 +199,11 @@
             <td>Mark</td>
             <td>Otto</td>
             <td>@defaultadmin defaultadmin defaultadmin</td>
-            <th>28 /12/ 2020</th>
+            <td>28 /12/ 2020</td>
             <td>28 /12/ 2020</td>
             <td>info@vinventa.com</td>
             <td>090078601</td>
-            <th>Admin</th>
+            <td>Admin</td>
             <td>Active</td>
             <td>Super Admin</td>
             <td class="td-center">
