--- a/assets-details-modal.html
+++ b/assets-details-modal.html
@@ -87,16 +87,24 @@
               </div>
 
               <div class="adapter-modal-content-box ">
+                <div class="assets-details-modal-title-row">
+                  <div>
+                    <h2 class="assets-details-modal-title">Comments</h2>
+                  </div>
+                  <!-- <div>
+                    <button class="cancel-btn pr-0">Export CVS</button>
+                  </div> -->
+
+                </div>
                 <div class="assets-details-modal-field-row">
                     <div class="">
-                      <label>Comments</label>
+                      <!-- <label>Comments</label> -->
                       <!-- <input type="text" class="field-large" placeholder="" /> -->
-                      <textarea name="" class="field-large" id="textarea_comments" cols="30" rows="5">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                      <textarea name="" class="field-large" id="textarea_comments" cols="30" rows="5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                       </textarea>
                     </div>
   
-                    <div class="mt-4">
+                    <div >
                       
                       <button type="button" class="theme-button-small graydient-primary-btn">
                         Updated
