--- a/assets-details-modal-add.html
+++ b/assets-details-modal-add.html
@@ -87,13 +87,22 @@
               </div>
 
               <div class="adapter-modal-content-box ">
+                <div class="assets-details-modal-title-row">
+                  <div>
+                    <h2 class="assets-details-modal-title">Labels</h2>
+                  </div>
+                  <!-- <div>
+                    <button class="cancel-btn pr-0">Export CVS</button>
+                  </div> -->
+
+                </div>
                 <div class="assets-details-modal-field-row">
                     <div class="">
-                      <label>Labels</label>
+                      <!-- <label>Labels</label> -->
                       <input type="text" class="field-large" placeholder="Enter Label" />
                     </div>
   
-                    <div class="mt-4">
+                    <div>
                       
                       <button type="button" class="theme-button-small graydient-primary-btn">
                         Add
