--- a/assets-details-modal-hard-drives.html
+++ b/assets-details-modal-hard-drives.html
@@ -92,7 +92,7 @@
                     <h2 class="assets-details-modal-title">Hard Drives</h2>
                   </div>
                   <div>
-                    <button class="cancel-btn pr-0">Export CVS</button>
+                    <button class="cancel-btn p-0">Export CVS</button>
                   </div>
 
                 </div>
