--- a/assets-details-modal-add.html
+++ b/assets-details-modal-add.html
@@ -91,12 +91,12 @@
 
            <ul class=" nav nav-tabs tabs-flow-main-header-row hori-scroll" data-mcs-theme="minimal-dark">
             <li class="nav-item">
-             <a class="nav-link active" href="#">
+             <a class="nav-link " href="#">
               <img src="images/icon-aws-adapter.png">
              </a>
             </li>
             <li class="nav-item">
-             <a class="nav-link" data-toggle="tab" href="#"> <img src="images/icon-aws-adapter.png"></a>
+             <a class="nav-link active" data-toggle="tab" href="#"> <img src="images/icon-aws-adapter.png"></a>
             </li>
             <li class="nav-item">
              <a class="nav-link" data-toggle="tab" href="#"> <img src="images/icon-aws-adapter.png"></a>
@@ -251,7 +251,7 @@
 
          <div class="tab-content" id="myTabContent">
 
-          <div class="tab-pane fade show active" id="box2">
+          <div class="tab-pane fade show active pl-3 pr-3" id="box2">
             <!-- page html -->
     <div class="assets-details-modal-title-row">
       <div>
@@ -263,11 +263,6 @@
 
     </div>
 
-
-    <div class="label-list-hori">
-      <input type="checkbox">
-      <label for="">Text type here</label>
-    </div>
 
     <div class="assets-details-modal-field-row">
         <div class="">
