--- a/assets-details-modal-add.html
+++ b/assets-details-modal-add.html
@@ -169,7 +169,7 @@
             <a href="#">
              <img src="images/icon-notes.svg">
             </a>
-            <a href="#">
+            <a  class="active " href="#">
              <img src="images/icon-tag.svg">
             </a>
             <a href="#">
