--- a/assets-details-modal-discovery-events.html
+++ b/assets-details-modal-discovery-events.html
@@ -80,7 +80,7 @@
 
 
 
-          <div class="summary-box">
+          <div class="summary-box summary-box-unselect ">
            <img src="images/vinventa-small-log.png">
           </div>
 
@@ -163,16 +163,16 @@
 
 
 
-           <div class="events-policy-tabs hori-scroll" data-mcs-theme="minimal-dark">
+           <div class="events-policy-tabs hori-scrolls" data-mcs-theme="minimal-darkss">
 
 
             <a href="#">
              <img src="images/icon-notes.svg">
             </a>
-            <a  class="active " href="#">
+            <a  class="" href="#">
              <img src="images/icon-tag.svg">
             </a>
-            <a href="#">
+            <a class="active" href="#">
              <img src="images/icon-calendar.svg">
             </a>
             <!-- <a href="#">
@@ -204,49 +204,18 @@
          </div>
 
 
-         <ul class="nav nav-tabs main-summary-tabs-flow  hori-scroll" data-mcs-theme="minimal-dark" id="myTab">
+         <ul class="nav nav-tabs main-summary-tabs-flow main-summary-tabs-flow-right-text  hori-scroll" data-mcs-theme="minimal-dark" id="myTab">
 
           <li class="nav-item ">
-           <a class="nav-link active" data-toggle="tab" href="#box2"> Summary </a>
+           <a class="nav-link active" data-toggle="tab" href="#box2"> Discovery Events</a>
           </li>
           <li class="nav-item">
-           <a class="nav-link" data-toggle="tab" href="#box3"> Firewall Rules</a>
+           <a class="nav-link" data-toggle="tab" href="#box3"> Policy Events</a>
           </li>
           <li class="nav-item">
-           <a class="nav-link" data-toggle="tab" href="#box4"> Network Interfaces</a>
+           <a class="nav-link" data-toggle="tab" href="#box4"> Other Events</a>
           </li>
-          <li class="nav-item">
-           <a class="nav-link" data-toggle="tab" href="#box5"> Hard Drives</a>
-          </li>
-          <li class="nav-item">
-           <a class="nav-link" data-toggle="tab" href="#box6">Hardware</a>
-          </li>
-          <li class="nav-item">
-           <a class="nav-link" data-toggle="tab" href="#box7"> Software</a>
-          </li>
-          <li class="nav-item">
-           <a class="nav-link" data-toggle="tab" href="#box7"> Software</a>
-          </li>
-          <li class="nav-item">
-           <a class="nav-link" data-toggle="tab" href="#box7"> Software</a>
-          </li>
-          <li class="nav-item">
-           <a class="nav-link" data-toggle="tab" href="#box7"> Software</a>
-          </li>
-          <li class="nav-item">
-           <a class="nav-link" data-toggle="tab" href="#box7"> Software</a>
-          </li>
-          <li class="nav-item">
-           <a class="nav-link" data-toggle="tab" href="#box7"> Software</a>
-          </li>
-          <li class="nav-item">
-           <a class="nav-link" data-toggle="tab" href="#box7"> Software</a>
-          </li>
-          <li class="nav-item">
-           <a class="nav-link" data-toggle="tab" href="#box7"> Software</a>
-          </li>
-
-
+          
          </ul>
 
          <div class="tab-content" id="myTabContent">
