--- a/assets-details-modal-add.html
+++ b/assets-details-modal-add.html
@@ -258,7 +258,7 @@
         <h2 class="assets-details-modal-title">Labels</h2>
       </div>
       <div>
-        <button class="cancel-btn pr-0">Export CVS</button>
+        <button id="btn_exportCVS" class="cancel-btn p-0">Export CVS</button>
       </div>
 
     </div>
@@ -267,12 +267,12 @@
     <div class="assets-details-modal-field-row">
         <div class="">
           <!-- <label>Labels</label> -->
-          <input type="text" class="field-large" placeholder="Enter Label" />
+          <input id="input_enterLabel" type="text" class="field-large" placeholder="Enter Label" />
         </div>
 
         <div>
           
-          <button type="button" class="theme-button-small graydient-primary-btn">
+          <button id="btn_add" type="button" class="theme-button-small graydient-primary-btn">
             Add
         </button>
         </div>
