--- a/user-profile.html
+++ b/user-profile.html
@@ -506,10 +506,10 @@
                                 <h4>@joh_doe325</h4>
                             </div>
                             <div class="userSettingIcons-wrapper">
-                                <a class="userSettings-icon mr-2" href="#">
+                                <a class="userSettings-icon active mr-2" href="#">
                                    &nbsp; <!-- <img src="images/userEdit-icon.svg" /> -->
                                 </a>
-                                <a class="userSettings-icon" href="#">
+                                <a class="userLock-icon" href="#">
                                     &nbsp;<!-- <img src="images/userLock-icon.svg" /> -->
                                 </a>
                             </div>
